<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/adults"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColorHint="@color/white"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:inputType="number"
                android:hint="@string/adultos_que_bebem"
                android:autofillHints="" />

            <EditText
                android:id="@+id/adultsWhoDoNotDrink"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_below="@+id/adults"
                android:inputType="number"
                android:hint="@string/adultos_que_n_o_bebem"
                android:autofillHints="" />

            <EditText
                android:id="@+id/children"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_below="@+id/adultsWhoDoNotDrink"
                android:inputType="number"
                android:hint="@string/quantidade_de_criancas"
                android:autofillHints="" />

            <EditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_below="@+id/children"
                android:inputType="number"
                android:hint="@string/dura_o_do_churrasco_em_horas"
                android:autofillHints="" />

            <ImageView
                android:id="@+id/meat"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/carne"
                android:layout_marginTop="60dp"
                android:layout_below="@+id/time" />

            <TextView
                android:id="@+id/meatValue"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_toEndOf="@+id/meat"
                android:layout_marginStart="30dp"
                android:layout_marginTop="70dp"
                android:textColor="@color/white"
                android:layout_below="@+id/time"
                android:text="@string/_0"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/textMeat"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_toEndOf="@+id/meatValue"
                android:layout_marginStart="10dp"
                android:layout_marginTop="70dp"
                android:textColor="@color/white"
                android:layout_below="@+id/time"
                android:text="@string/kg_de_carne"
                android:textSize="20sp"
                />

            <ImageView
                android:id="@+id/beer"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/beer"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/meat" />

            <TextView
                android:id="@+id/beerValue"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_toEndOf="@+id/beer"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:layout_below="@id/meat"
                android:textColor="@color/white"
                android:text="0"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/textBeer"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/beerValue"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_below="@id/meat"
                android:textColor="@color/white"
                android:text="@string/latas_de_cerveja"
                android:textSize="20dp"
                />

            <ImageView
                android:id="@+id/soda"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/refri"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/beer"/>

            <TextView
                android:id="@+id/sodaValue"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/soda"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:textColor="@color/white"
                android:layout_below="@+id/beer"
                android:text="0"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/textSoda"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/sodaValue"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/beer"
                android:textColor="@color/white"
                android:text="Refrigerante de 2L"
                android:textSize="20dp"
                />

            <Button
                android:id="@+id/buttonCalculate"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:layout_below="@+id/soda"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:text="Calcular"/>

            <ImageView
                android:id="@+id/signOut"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_below="@+id/buttonCalculate"
                android:src="@drawable/ic_signout"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>
    </ScrollView>



</RelativeLayout>